# rust-api-code

./: .gitignore  Cargo.toml  docker-compose.yml  schema.sql
cli_app/: Cargo.toml
cli_app/src/: lib.rs  main.rs  model.rs  settings.rs  state.rs
cli_app/src/api/: errors.rs  mod.rs  v1.rs
cli_app/src/api/handlers/: hello.rs  login.rs  mod.rs  posts.rs
cli_app/src/api/middleware/: auth.rs
cli_app/src/api/request/: login.rs
cli_app/src/api/response/: login.rs  mod.rs  post.rs
cli_app/src/commands/: hello.rs  mod.rs  serve.rs
cli_app/src/services/: post.rs  user.rs
cli_app/src/state/: mod.rs
hello_main/: Cargo.toml
hello_main/src/: main.rs
