[package]
name = "cli_app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4"
anyhow = "1.0.96"
config = "0.14"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
arc-swap = "1.7.1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tower-http = { version = "0.3.5", features = ["trace"] }

