[package]
name = "cli_app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4"
anyhow = "1.0.96"
config = "0.14"
dotenv = "0.15"
jsonwebtoken = "8.0.0"
serde = { version = "1", features = ["derive"] }
axum = "0.7.4"
tower = { version = "0.4", features = ["full"] }
tokio = { version = "1.37", features = ["full"] }
arc-swap = "1.7.1"
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
argon2 = "0.5"
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio", "tls-rustls", "chrono" ] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
chrono = {  version = "0.4.34", features = ["serde"] }
opentelemetry = { version = "0.27", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "http-json", "metrics", "logs", "reqwest-client", "reqwest-rustls"]  }
tracing-opentelemetry = "0.28.0"